unpackaged/main/default/objects/Contact/fields/EmailOptInDate__c.field-meta.xml
<CustomField>
    <fullName>EmailOptInDate__c</fullName>
    <label>Email Opt-in Date</label>
    <type>DateTime</type>
</CustomField>