unpackaged/main/default/objects/Contact/fields/EmailOptInStatus__c.field-meta.xml
<CustomField>
    <fullName>EmailOptInStatus__c</fullName>
    <label>Email Opt-in</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>