unpackaged/main/default/objects/Contact/fields/EmailOptOutDate__c.field-meta.xml
<CustomField>
    <fullName>EmailOptOutDate__c</fullName>
    <label>Email Opt-out Date</label>
    <type>DateTime</type>
</CustomField>