unpackaged/main/default/objects/Contact/fields/EmailOptOutReason__c.field-meta.xml
<CustomField>
    <fullName>EmailOptOutReason__c</fullName>
    <label>Email Opt Out Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ECOA</fullName>
            </value>
            <value>
                <fullName>IN</fullName>
                <label>IN - I am no longer interested in these emails</label>
            </value>
            <value>
                <fullName>MA</fullName>
                <label>MA - I receive too many emails</label>
            </value>
            <value>
                <fullName>ML</fullName>
                <label>ML - I don’t remember signing up for this mailing list</label>
            </value>
            <value>
                <fullName>OT</fullName>
                <label>OT - Other</label>
            </value>
            <value>
                <fullName>RE</fullName>
                <label>RE - I don’t think the content is relevant</label>
            </value>
            <value>
                <fullName>SPAM</fullName>
            </value>
            <value>
                <fullName>SPAM COMPL</fullName>
            </value>
            <value>
                <fullName>SP</fullName>
                <label>SP - I think these emails are Spam</label>
            </value>
            <value>
                <fullName>UNSUBSCRIB</fullName>
            </value>
            <value>
                <fullName>U</fullName>
                <isActive>false</isActive>
                <label>U - Unknown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>