unpackaged/main/default/objects/Contact/fields/EmailOrigSource__c.field-meta.xml
<CustomField>
    <fullName>EmailOrigSource__c</fullName>
    <label>EmailOrigSource</label>
    <length>100</length>
    <type>Text</type>
</CustomField>