unpackaged/main/default/objects/Contact/fields/EmailUndeliverableDate__c.field-meta.xml
<CustomField>
    <fullName>EmailUndeliverableDate__c</fullName>
    <label>Email Undeliverable Date</label>
    <type>Date</type>
</CustomField>