unpackaged/main/default/objects/Contact/fields/First_Time_Capture__c.field-meta.xml
<CustomField>
    <fullName>First_Time_Capture__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Captured Contact for first time from SFCC</description>
    <label>First Time Capture</label>
    <type>Checkbox</type>
</CustomField>