unpackaged/main/default/objects/Contact/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <formula>IF(ISPICKVAL(SelfClaimedGender__c, &quot;&quot;), 
CASE(TEXT(Account.Gender__c),
&quot;M&quot;,&quot;M&quot;,
&quot;F&quot;,&quot;F&quot;,&quot;None&quot;
),
CASE(TEXT(SelfClaimedGender__c),
&quot;GN&quot;,&quot;GN&quot;,
&quot;M&quot;,&quot;M&quot;,
&quot;PNTS&quot;,&quot;PNTS&quot;,
&quot;F&quot;,&quot;F&quot;,
&quot;NONE&quot;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gender</label>
    <type>Text</type>
</CustomField>