unpackaged/main/default/objects/Contact/fields/IseCommSMS__c.field-meta.xml
<CustomField>
    <fullName>IseCommSMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IseCommSMS</label>
    <type>Checkbox</type>
</CustomField>