unpackaged/main/default/objects/Contact/fields/IsExisting__c.field-meta.xml
<CustomField>
    <fullName>IsExisting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsExisting</label>
    <type>Checkbox</type>
</CustomField>