unpackaged/main/default/objects/Contact/fields/Keyword__c.field-meta.xml
<CustomField>
    <fullName>Keyword__c</fullName>
    <description>Captures the Keyword values from where the customer SMS opt In. Ex: TH004, Preference center , ChargeIt</description>
    <label>SMSKeyword</label>
    <length>200</length>
    <type>Text</type>
</CustomField>