unpackaged/main/default/objects/Contact/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E</fullName>
                <label>English</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>French</label>
            </value>
            <value>
                <fullName>U</fullName>
                <isActive>false</isActive>
                <label>Unknown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>