unpackaged/main/default/objects/Contact/fields/Last_Platform_Event_Applied_Updates__c.field-meta.xml
<CustomField>
    <fullName>Last_Platform_Event_Applied_Updates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>... describes if the last processed Platform Event applied updates to the Contact definition (checked = updates applied, unchecked = no updates applied).</description>
    <inlineHelpText>... describes if the last processed Platform Event applied updates to the Contact definition (checked = updates applied, unchecked = no updates applied).</inlineHelpText>
    <label>Last Platform Event Applied Updates</label>
    <type>Checkbox</type>
</CustomField>