unpackaged/main/default/objects/Contact/fields/Last_Platform_Event_Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Platform_Event_Processed_Date__c</fullName>
    <description>... represents the date that the last B2C Commerce integration Process Contact platform event was processed.</description>
    <inlineHelpText>... represents the date that the last B2C Commerce integration Process Contact platform event was processed.</inlineHelpText>
    <label>Last Platform Event Processed Date</label>
    <type>DateTime</type>
</CustomField>