unpackaged/main/default/objects/Contact/fields/Last_Update_Pushed_to_B2C_Commerce__c.field-meta.xml
<CustomField>
    <fullName>Last_Update_Pushed_to_B2C_Commerce__c</fullName>
    <description>... represents the date / time that an update of this Contact was pushed to its corresponding B2C Commerce profile.</description>
    <inlineHelpText>... represents the date / time that an update of this Contact was pushed to its corresponding B2C Commerce profile.</inlineHelpText>
    <label>Last Update Pushed to B2C Commerce</label>
    <type>DateTime</type>
</CustomField>