unpackaged/main/default/objects/Contact/fields/Latest_Campaigns__c.field-meta.xml
<CustomField>
    <fullName>Latest_Campaigns__c</fullName>
    <label>Campaign Name</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>