unpackaged/main/default/objects/Contact/fields/Latest_Source__c.field-meta.xml
<CustomField>
    <fullName>Latest_Source__c</fullName>
    <label>Latest Source System</label>
    <length>20</length>
    <type>Text</type>
</CustomField>