unpackaged/main/default/objects/Contact/fields/Loyalty_Flag_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Flag_Update_Date__c</fullName>
    <label>Loyalty Flag Update Date</label>
    <type>DateTime</type>
</CustomField>