unpackaged/main/default/objects/Contact/fields/Loyalty_Flag_Update_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Flag_Update_Reason__c</fullName>
    <label>Loyalty Flag Update Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RC11-Loyalty Membership Terminated BB</fullName>
            </value>
            <value>
                <fullName>Request Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>