unpackaged/main/default/objects/Contact/fields/Loyalty_Optin_Date_form__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Optin_Date_form__c</fullName>
    <formula>IF(CreatedByMethod__c=&#39;API&#39;,DATEVALUE(Loyalty_Optin_Date__c),
CASE(Source_System__c,
&quot;POS&quot;, DATEVALUE(Loyalty_Optin_Date__c) + 1,
&quot;Merkle&quot;, DATEVALUE(Loyalty_Optin_Date__c) + 1,
&quot;Outside Lists&quot;, DATEVALUE(Loyalty_Optin_Date__c) + 1,
&quot;WiFi&quot;, DATEVALUE(Loyalty_Optin_Date__c) + 1,
DATEVALUE(Loyalty_Optin_Date__c))
)</formula>
    <label>Loyalty Optin Date</label>
    <type>Date</type>
</CustomField>