unpackaged/main/default/objects/Contact/fields/LoyaltyFlag__c.field-meta.xml
<CustomField>
    <fullName>LoyaltyFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LoyaltyFlag</label>
    <type>Checkbox</type>
</CustomField>