unpackaged/main/default/objects/Contact/fields/LoyaltyID__c.field-meta.xml
<CustomField>
    <fullName>LoyaltyID__c</fullName>
    <label>Loyalty ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>