unpackaged/main/default/objects/Contact/fields/LoyaltyMergeDate__c.field-meta.xml
<CustomField>
    <fullName>LoyaltyMergeDate__c</fullName>
    <label>LoyaltyMergeDate</label>
    <type>Date</type>
</CustomField>