unpackaged/main/default/objects/Contact/fields/Mailing_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Country_Code__c</fullName>
    <formula>CASE( MailingCountry ,
&quot;Canada&quot;,&quot;CA&quot;,
&quot;CA&quot;,&quot;CA&quot;,
&quot;CANADA&quot;,&quot;CA&quot;,
&quot;CAN&quot;,&quot;CA&quot;,
&quot;UNITED STATES&quot;,&quot;US&quot;,
&quot;United States&quot;,&quot;US&quot;,
&quot;united states&quot;,&quot;US&quot;,
&quot;USA&quot;,&quot;US&quot;,
&quot;usa&quot;,&quot;US&quot;,
&quot;Usa&quot;,&quot;US&quot;,
&quot;US&quot;,&quot;US&quot;,
&quot;canada&quot;,&quot;CA&quot;,
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Country Code</label>
    <type>Text</type>
</CustomField>