unpackaged/main/default/objects/Contact/fields/MailOptinStatus__c.field-meta.xml
<CustomField>
    <fullName>MailOptinStatus__c</fullName>
    <label>MailOptinStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No</label>
            </value>
            <value>
                <fullName>U</fullName>
                <isActive>false</isActive>
                <label>Unknown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>