unpackaged/main/default/objects/Contact/fields/Market_ds__c.field-meta.xml
<CustomField>
    <fullName>Market_ds__c</fullName>
    <label>Market DS</label>
    <length>15</length>
    <type>Text</type>
</CustomField>