unpackaged/main/default/objects/Contact/fields/MarketingSource__c.field-meta.xml
<CustomField>
    <fullName>MarketingSource__c</fullName>
    <label>MarketingSource</label>
    <length>2</length>
    <type>Text</type>
</CustomField>