unpackaged/main/default/objects/Contact/fields/MobileID__c.field-meta.xml
<CustomField>
    <fullName>MobileID__c</fullName>
    <externalId>true</externalId>
    <label>Mobile ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>