unpackaged/main/default/objects/Contact/fields/Multiple_Offender__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Offender__c</fullName>
    <formula>IF( Multiple_Offender_Contact__c = TRUE, 
    (IMAGE(&quot;https://pvhservicecloud--c.documentforce.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0683t00000HPZcY&amp;operationContext=CHATTER&amp;contentId=05T3t00000y7eV8&quot;,
    &quot; &quot;, 40, 40)),
&quot; &quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Multiple Offender</label>
    <type>Text</type>
</CustomField>