unpackaged/main/default/objects/Contact/fields/Multiple_Offender_Contact__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Offender_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multiple Offender Contact</label>
    <type>Checkbox</type>
</CustomField>