unpackaged/main/default/objects/Contact/fields/OptOutShare__c.field-meta.xml
<CustomField>
    <fullName>OptOutShare__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When opt_out_share = 0
 - opt_out_share = N

When opt_out_share = 1
 - opt_out_share =  Y</description>
    <label>OptOutShare</label>
    <type>Checkbox</type>
</CustomField>