unpackaged/main/default/objects/Contact/fields/Owner_type_id_18_character__c.field-meta.xml
<CustomField>
    <fullName>Owner_type_id_18_character__c</fullName>
    <formula>CASESAFEID(  OwnerId  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner type id 18 character</label>
    <type>Text</type>
</CustomField>