unpackaged/main/default/objects/Contact/fields/Point_Balance__c.field-meta.xml
<CustomField>
    <fullName>Point_Balance__c</fullName>
    <label>Point Balance</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>