unpackaged/main/default/objects/Contact/fields/PossibleDuplicateRecord__c.field-meta.xml
<CustomField>
    <fullName>PossibleDuplicateRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Possible Duplicate Record</label>
    <type>Checkbox</type>
</CustomField>