unpackaged/main/default/objects/Contact/fields/PrefCenterEmailTypes__c.field-meta.xml
<CustomField>
    <fullName>PrefCenterEmailTypes__c</fullName>
    <label>Email Types</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>