unpackaged/main/default/objects/Contact/fields/PrefCenterInterests__c.field-meta.xml
<CustomField>
    <fullName>PrefCenterInterests__c</fullName>
    <label>Email Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
                <label>Company Stores</label>
            </value>
            <value>
                <fullName>O</fullName>
                <label>Tommy.com</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>Anchor / Specialty Stores</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>Mens</label>
            </value>
            <value>
                <fullName>W</fullName>
                <label>Womens</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>Kids (TH)</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>Ecom Main Site</label>
            </value>
            <value>
                <fullName>G</fullName>
                <label>Ecomm - New (TH)</label>
            </value>
            <value>
                <fullName>H</fullName>
                <label>Home</label>
            </value>
            <value>
                <fullName>L</fullName>
                <label>Loyalty</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Retail Store</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>One Time</label>
            </value>
            <value>
                <fullName>T</fullName>
                <label>Ecom Outlet</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>CK Collection</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>CK International</label>
            </value>
            <value>
                <fullName>K</fullName>
                <label>Kids (HE)</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>Fitness</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Performance</label>
            </value>
            <value>
                <fullName>V</fullName>
                <label>Active Recreation</label>
            </value>
            <value>
                <fullName>Q</fullName>
                <label>Adaptive</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>