unpackaged/main/default/objects/Contact/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To denote if Contact record is primary</description>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>