unpackaged/main/default/objects/Contact/fields/Profile_Complete__c.field-meta.xml
<CustomField>
    <fullName>Profile_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Profile Complete</label>
    <type>Checkbox</type>
</CustomField>