unpackaged/main/default/objects/Contact/fields/PVHCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>PVHCreatedDate__c</fullName>
    <label>PVHCreatedDate</label>
    <type>DateTime</type>
</CustomField>