unpackaged/main/default/objects/Contact/fields/PVHCreatedDate_form__c.field-meta.xml
<CustomField>
    <fullName>PVHCreatedDate_form__c</fullName>
    <formula>IF(HOUR(TIMEVALUE(PVHCreatedDate__c))&lt;09,DATEVALUE(PVHCreatedDate__c) + 1,DATEVALUE(PVHCreatedDate__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PVHCreatedDate</label>
    <type>Date</type>
</CustomField>