unpackaged/main/default/objects/Contact/fields/PVHLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>PVHLastModifiedDate__c</fullName>
    <label>PVHLastModifiedDate</label>
    <type>DateTime</type>
</CustomField>