unpackaged/main/default/objects/Contact/fields/Record_Type_ID_18_character__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_ID_18_character__c</fullName>
    <formula>CASESAFEID(RecordTypeId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type ID 18 character</label>
    <type>Text</type>
</CustomField>