unpackaged/main/default/objects/Contact/fields/Region_ds__c.field-meta.xml
<CustomField>
    <fullName>Region_ds__c</fullName>
    <label>Region DS</label>
    <length>15</length>
    <type>Text</type>
</CustomField>