unpackaged/main/default/objects/Contact/fields/ReverseAppend__c.field-meta.xml
<CustomField>
    <fullName>ReverseAppend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reverse Append</label>
    <type>Checkbox</type>
</CustomField>