unpackaged/main/default/objects/Contact/fields/RingCentralChannel__c.field-meta.xml
<CustomField>
    <fullName>RingCentralChannel__c</fullName>
    <description>Field to store channel value of incoming call temporarily, use this to populate case channel field later.</description>
    <label>RingCentralChannel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>