unpackaged/main/default/objects/Contact/fields/Salutation__c.field-meta.xml
<CustomField>
    <fullName>Salutation__c</fullName>
    <label>Salutation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>