unpackaged/main/default/objects/Contact/fields/SelfClaimedGender__c.field-meta.xml
<CustomField>
    <fullName>SelfClaimedGender__c</fullName>
    <label>SelfClaimedGender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>U</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>GN</fullName>
            </value>
            <value>
                <fullName>PNTS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>