unpackaged/main/default/objects/Contact/fields/SFCC_User_ID__c.field-meta.xml
<CustomField>
    <fullName>SFCC_User_ID__c</fullName>
    <label>SFCC User ID</label>
    <type>Email</type>
</CustomField>