unpackaged/main/default/objects/Contact/fields/SignupStore__c.field-meta.xml
<CustomField>
    <fullName>SignupStore__c</fullName>
    <label>SignupStore</label>
    <length>80</length>
    <type>Text</type>
</CustomField>