unpackaged/main/default/objects/Contact/fields/SMS_Is_Valid__c.field-meta.xml
<CustomField>
    <fullName>SMS_Is_Valid__c</fullName>
    <defaultValue>true</defaultValue>
    <label>SMS Is Valid</label>
    <type>Checkbox</type>
</CustomField>