unpackaged/main/default/objects/Contact/fields/SMS_OptOut__c.field-meta.xml
<CustomField>
    <fullName>SMS_OptOut__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field created to give ability to CSR for opting out customer from SMS</description>
    <label>SMS OptOut</label>
    <type>Checkbox</type>
</CustomField>