unpackaged/main/default/objects/Contact/fields/SMS_Unsubscribe_Reason__c.field-meta.xml
<CustomField>
    <fullName>SMS_Unsubscribe_Reason__c</fullName>
    <description>To capture the SMS unsubscribe reason once the customer opted out from SMS.</description>
    <label>SMS Unsubscribe Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>