unpackaged/main/default/objects/Contact/fields/SMSCustPreferences__c.field-meta.xml
<CustomField>
    <fullName>SMSCustPreferences__c</fullName>
    <label>SMSCustPreferences</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>W</fullName>
            </value>
            <value>
                <fullName>T</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>O</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>