unpackaged/main/default/objects/Contact/fields/SMSLocale__c.field-meta.xml
<CustomField>
    <fullName>SMSLocale__c</fullName>
    <label>SMSLocale</label>
    <length>10</length>
    <type>Text</type>
</CustomField>