unpackaged/main/default/objects/Contact/fields/SMSNumber__c.field-meta.xml
<CustomField>
    <fullName>SMSNumber__c</fullName>
    <label>SMSNumber</label>
    <type>Phone</type>
</CustomField>