unpackaged/main/default/objects/Contact/fields/SMSOptInDate__c.field-meta.xml
<CustomField>
    <fullName>SMSOptInDate__c</fullName>
    <label>SMS Opt-in Date</label>
    <type>DateTime</type>
</CustomField>