unpackaged/main/default/objects/Contact/fields/SMSOptOutDate__c.field-meta.xml
<CustomField>
    <fullName>SMSOptOutDate__c</fullName>
    <label>SMS Opt-out Date</label>
    <type>DateTime</type>
</CustomField>