unpackaged/main/default/objects/Contact/fields/SMSOrigSource__c.field-meta.xml
<CustomField>
    <fullName>SMSOrigSource__c</fullName>
    <label>SMSOrigSource</label>
    <length>50</length>
    <type>Text</type>
</CustomField>