unpackaged/main/default/objects/Contact/fields/SMSResponseData__c.field-meta.xml
<CustomField>
    <fullName>SMSResponseData__c</fullName>
    <label>SMSResponseData</label>
    <length>255</length>
    <type>Text</type>
</CustomField>