unpackaged/main/default/objects/Contact/fields/SMSStatus__c.field-meta.xml
<CustomField>
    <fullName>SMSStatus__c</fullName>
    <label>SMSStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACTIVE</fullName>
            </value>
            <value>
                <fullName>INACTIVE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>