unpackaged/main/default/objects/Contact/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Source from Outside Lists.</description>
    <inlineHelpText>Source from Outside Lists.</inlineHelpText>
    <label>Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>