unpackaged/main/default/objects/Contact/fields/Store_Credit__c.field-meta.xml
<CustomField>
    <fullName>Store_Credit__c</fullName>
    <inlineHelpText>This value is indicated in US dollars.</inlineHelpText>
    <label>Store Credit</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>