unpackaged/main/default/objects/Contact/fields/Store_Master__c.field-meta.xml
<CustomField>
    <fullName>Store_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store Master</label>
    <referenceTo>StoreMaster__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>