unpackaged/main/default/objects/Contact/fields/StoreOfPreferenceLanguage__c.field-meta.xml
<CustomField>
    <fullName>StoreOfPreferenceLanguage__c</fullName>
    <label>Store of Preference Language</label>
    <length>80</length>
    <type>Text</type>
</CustomField>