unpackaged/main/default/objects/Contact/fields/StorePreference__c.field-meta.xml
<CustomField>
    <fullName>StorePreference__c</fullName>
    <description>Preferred store</description>
    <label>Store Preference</label>
    <length>20</length>
    <type>Text</type>
</CustomField>