unpackaged/main/default/objects/Contact/fields/Suite__c.field-meta.xml
<CustomField>
    <fullName>Suite__c</fullName>
    <label>Suite</label>
    <length>15</length>
    <type>Text</type>
</CustomField>