unpackaged/main/default/objects/Contact/fields/System_Type__c.field-meta.xml
<CustomField>
    <fullName>System_Type__c</fullName>
    <description>The type of system for which the Data Owner is Responsible</description>
    <label>System Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>External - Managed By PVH</fullName>
            </value>
            <value>
                <fullName>Supplemental</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>