unpackaged/main/default/objects/Contact/fields/T_C_Fit_Quiz_Token__c.field-meta.xml
<CustomField>
    <fullName>T_C_Fit_Quiz_Token__c</fullName>
    <description>Contains alphanumeric values</description>
    <label>T&amp;C Fit Quiz Token</label>
    <length>50</length>
    <type>Text</type>
</CustomField>