unpackaged/main/default/objects/Contact/fields/T_C_Guest__c.field-meta.xml
<CustomField>
    <fullName>T_C_Guest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When value = 0 checkbox will not be checked, when value = 1 then box will be checked.</description>
    <label>T&amp;C Guest</label>
    <type>Checkbox</type>
</CustomField>