unpackaged/main/default/objects/Contact/fields/T_C_ID__c.field-meta.xml
<CustomField>
    <fullName>T_C_ID__c</fullName>
    <description>Unique id for True &amp; Co .Ex:3861427</description>
    <label>T&amp;C ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>