unpackaged/main/default/objects/Contact/fields/T_C_Purchaser__c.field-meta.xml
<CustomField>
    <fullName>T_C_Purchaser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>T&amp;C Purchaser</label>
    <type>Checkbox</type>
</CustomField>