unpackaged/main/default/objects/Contact/fields/Tap__c.field-meta.xml
<CustomField>
    <fullName>Tap__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tap</label>
    <type>Checkbox</type>
</CustomField>