unpackaged/main/default/objects/Contact/fields/tempEnableTriggeredSend__c.field-meta.xml
<CustomField>
    <fullName>tempEnableTriggeredSend__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A temp field needed for safe testing of triggered sends. Eventually not required.</description>
    <label>tempEnableTriggeredSend</label>
    <type>Checkbox</type>
</CustomField>