unpackaged/main/default/objects/Contact/fields/Total_Updates_From_B2C_Commerce__c.field-meta.xml
<CustomField>
    <fullName>Total_Updates_From_B2C_Commerce__c</fullName>
    <defaultValue>0</defaultValue>
    <description>... represents the total number of profile updates initiated by B2C Commerce for a given Salesforce Contact.</description>
    <inlineHelpText>... represents the total number of profile updates initiated by B2C Commerce for a given Salesforce Contact.</inlineHelpText>
    <label>Total Updates From B2C Commerce</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>