unpackaged/main/default/objects/Contact/fields/TriggerCSREmailFlow__c.field-meta.xml
<CustomField>
    <fullName>TriggerCSREmailFlow__c</fullName>
    <description>This field will get updated from from Lightning component. For the change, flow will trigger from Process builder</description>
    <label>TriggerCSREmailFlow</label>
    <length>100</length>
    <type>Text</type>
</CustomField>