unpackaged/main/default/objects/Contact/fields/Undeliverable_Flag__c.field-meta.xml
<CustomField>
    <fullName>Undeliverable_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Undeliverable Flag</label>
    <type>Checkbox</type>
</CustomField>