unpackaged/main/default/objects/Contact/fields/UnsubReason__c.field-meta.xml
<CustomField>
    <fullName>UnsubReason__c</fullName>
    <label>Email Unsubscribe Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>